lab_1a/lab_1a_tf/03-igw.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main-igw"
    Component = "network"
  }
}
